# vs-aiortc

./: README.rst  pyproject.toml
.github/workflows/: tests.yml
docs/: api.rst  changelog.rst
examples/datachannel-vpn/: vpn.py
examples/janus/: janus.py
examples/server/: server.py
examples/videostream-cli/: cli.py
examples/webcam/: webcam.py
scripts/: fetch-vendor.py
src/vsaiortc/: __init__.py  mediastreams.py  rate.py  rtcpeerconnection.py  rtcrtpreceiver.py
src/vsaiortc/codecs/: __init__.py  g722.py  opus.py
src/vsaiortc/contrib/: media.py  signaling.py
tests/: codecs.py  test_clock.py  test_codecs.py  test_contrib_media.py  test_contrib_signaling.py  test_g711.py  test_h264.py  test_jitterbuffer.py  test_mediastreams.py  test_opus.py  test_ortc.py  test_rate.py  test_rtcdtlstransport.py  test_rtcicetransport.py  test_rtcpeerconnection.py  test_rtcrtpreceiver.py  test_rtcrtpsender.py  test_rtcrtptransceiver.py  test_rtcsctptransport.py  test_rtcsessiondescription.py  test_rtp.py  test_sdp.py  test_utils.py  test_vpx.py  utils.py
